fix/main : responsive
Fixed timer font size going out of container with the bigger font

--- a/src/scss/responsive.scss
+++ b/src/scss/responsive.scss
@@ -35,6 +35,6 @@
     }
 
     #timer #time {
-        font-size: min(7rem, 21vw);
+        font-size: min(5.5rem, 21vw);
     }
 }
